Fix landing aligment - Fixed responsiveness on tablet

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -202,6 +202,14 @@
 
 }
 
+@media (min-width: 426px) and (max-width: 768px) {
+    .racers-container {
+        .race-heading {
+            margin-top: 2.5em;
+        }
+    }
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {}
 
 @media (min-width: 1023px) and (max-width: 1200px) {}
